--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h2>Sujaya Maiyya</h2>
+								<h4>Assistant Processor</h4>
+								<h4>University of Waterloo</h4>
 							</header>
 							<p class="darkfont" style="color: black; text-align: justify;">I am an assistant professor at 
 							<a href="https://cs.uwaterloo.ca/" target=”_blank” onclick=”ga('send', {hitType: 'event'});”>Cheriton School of Computer Science</a> at University of Waterloo. Prior to joining Waterloo, I was briefly a postdoctoral researcher at Cornell University. I received my PhD from UC Santa Barbara where I was co-advised by Amr El Abbadi and Divy Agrawal.<br><br>
 
-							As a Computer Science researcher I design, prototype and evaluate protocols for managing large-scale data in a performance efficient and secure manner. My research intersects 3 facets of database systems: performance, fault tolerance, and security. Today, much of the data that is produced - including data that is private and sensitive - is stored on third party cloud providers. When the data is outsourced, there exists a fundamental tradeoff between security and efficiency while accessing the outsourced data. My research develops protocols that strike a balance between efficiency and security in both trusted and untrusted systems. The increasing popularity of blockchains and the use of third-party cloud -- scenarios where the servers storing and processing the data are not trusted but the data owners nonetheless need low data access latencies -- make my research highly relevant to today's problems.</p>
+							<b>Research Interests</b>: My research interests broadly lie in distributed systems & databases and data privacy & security. I design, prototype and evaluate protocols for managing large-scale data in a performance efficient and secure manner. My research intersects 3 facets of database systems: performance, fault tolerance, and security. 
+
+							<b>Prospective Students</b>: I am looking for highly-motivated PhD and MSc students with full funding opportunities. If you are interested in working with me on systems research, please send me an email and mention my name as a potential advisor in your
+							<a href="https://cs.uwaterloo.ca/future-graduate-students/applying-admissions" target=”_blank” onclick=”ga('send', {hitType: 'event'});”>application</a>.</p>
 						<footer>
                         <a href="https://dblp.uni-trier.de/pers/hd/m/Maiyya:Sujaya" target="_blank"><span class="iconify" data-icon="simple-icons:dblp" data-inline="false"></span></a>
                         <a href="https://scholar.google.com/citations?user=9pZLKbgAAAAJ&hl=en" target="_blank"><span class="ai ai-google-scholar ai-lg"></span></a>
