--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<p class="darkfont" style="color: black; text-align: justify;">I am an assistant professor at 
 							<a href="https://cs.uwaterloo.ca/" target=”_blank” onclick=”ga('send', {hitType: 'event'});”>Cheriton School of Computer Science</a> at University of Waterloo. Prior to joining Waterloo, I was briefly a postdoctoral researcher at Cornell University. I received my PhD from UC Santa Barbara where I was co-advised by Amr El Abbadi and Divy Agrawal.<br><br>
 
-							<b>Research Interests</b>: My research interests broadly lie in distributed systems & databases and data privacy & security. I design, prototype and evaluate protocols for managing large-scale data in a performance efficient and secure manner. My research intersects 3 facets of database systems: performance, fault tolerance, and security. 
+							<b>Research Interests</b>: My research interests broadly lie in distributed systems & databases and data privacy & security. I design, prototype and evaluate protocols for managing large-scale data in a performance efficient and secure manner. My research intersects 3 facets of database systems: performance, fault tolerance, and security. <br><br>
 
 							<b>Prospective Students</b>: I am looking for highly-motivated PhD and MSc students with full funding opportunities. If you are interested in working with me on systems research, please send me an email and mention my name as a potential advisor in your
 							<a href="https://cs.uwaterloo.ca/future-graduate-students/applying-admissions" target=”_blank” onclick=”ga('send', {hitType: 'event'});”>application</a>.</p>
