--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <br>
                         <a href="assets/papers/Research_Statement.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'vldb18tutorialpdf'});”>Research Statement</a>
                         <br>
-                        <i class="fa fa-map-marker"></i> Ithaca, USA
+                        <i class="fa fa-map-marker"></i> Waterloo, Canada
                 		</footer>
 						</div>
 					</div>
@@ -122,14 +122,15 @@
 
                             <p class="darkfont"><b>Sujaya Maiyya</b>, Prabhanjan Ananth, Divyakant Agrawal, Amr El Abbadi <i>"ORTOA: One Round Trip Oblivious Access"</i>
                             </i>
-                            [<a href="assets/papers/ORTOA.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'ORTOA'});”>pdf</a>].
+                            [<a href="https://eprint.iacr.org/2022/1506" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'ORTOA'});”>pdf</a>].
                             </p>
 
-                            <p class="darkfont">Mohammad Javad Amiri, Daniel Shu, <b>Sujaya Maiyya</b>, Divyakant Agrawal, Amr El Abbadi <i>". Ziziphus: Scalable Data Management Across Byzantine Edge Servers"</i>
+                            <h4>Refereed Conference Publications</h4>
+                            <p class="darkfont">Mohammad Javad Amiri, Daniel Shu, <b>Sujaya Maiyya</b>, Divyakant Agrawal, Amr El Abbadi <i>". Ziziphus: Scalable Data Management Across Byzantine Edge Servers"</i> ICDE 2023
                             </i>
                             [<a href="assets/papers/ziziphus.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'ziziphus'});”>pdf</a>].
                             </p>
-                            <h4>Refereed Conference Publications</h4> 
+
                             <p class="darkfont"><b>Sujaya Maiyya</b>, Seif Ibrahim, Caitlin Scarberry, Divyakant Agrawal, Amr El Abbadi, Rachel Lin, Stefano Tessaro, Victor Zakhary <i>"QuORAM: A Quorum-based Replicated ORAM Datastore"</i> USENIX Security 2022
                             [<a href="assets/papers/QuORAM.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'QuORAM'});”>pdf</a>].
                             </p>
