Copying changes from Waterloo directory

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 				<ul class="container">
 					<li><a href="#about">About Me</a></li>
                     <li><a href="#news">Recent News</a></li>
-                    <li><a href="#education">Education</a></li>
                     <li><a href="#awards">Awards</a></li>
 					<li><a href="#papers">Publications</a></li>
-                    <li><a href="#ongoing">Ongoing Research</a></li>
-					<li><a href="#teaching">Teaching Experience</a></li>
-					<li><a href="#industry">Industry Experience</a></li>
+                    <!-- <li><a href="#ongoing">Ongoing Research</a></li> -->
+<!-- 					<li><a href="#teaching">Teaching Experience</a></li>
+					<li><a href="#industry">Industry Experience</a></li> -->
 				</ul>
 			</nav>
 		<!-- Home -->
@@ -33,16 +32,16 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/sujaya.png" alt="" /></span>
+							<span class="image fit"><img src="images/sujaya.png" alt=""/></span>
 						</div>
-						<div class="col-8 col-7-large col-12-medium">
+						<div class="col-8 col-7-large col-12-medium" style="margin-top: -3cm; margin-bottom: -1cm">
 							<header>
 								<h2>Sujaya Maiyya</h2>
-								<h4>Assistant Processor</h4>
+								<h4>Assistant Professor</h4>
 								<h4>University of Waterloo</h4>
 							</header>
 							<p class="darkfont" style="color: black; text-align: justify;">I am an assistant professor at 
-							<a href="https://cs.uwaterloo.ca/" target=”_blank” onclick=”ga('send', {hitType: 'event'});”>Cheriton School of Computer Science</a> at University of Waterloo. Prior to joining Waterloo, I was briefly a postdoctoral researcher at Cornell University. I received my PhD from UC Santa Barbara where I was co-advised by Amr El Abbadi and Divy Agrawal.<br><br>
+							<a href="https://cs.uwaterloo.ca/" target=”_blank” onclick=”ga('send', {hitType: 'event'});”>Cheriton School of Computer Science</a> at University of Waterloo. Prior to joining Waterloo, I did a short postdoc at Cornell University. I received my PhD from UC Santa Barbara where I was co-advised by Amr El Abbadi and Divy Agrawal.<br><br>
 
 							<b>Research Interests</b>: My research interests broadly lie in distributed systems & databases and data privacy & security. I design, prototype and evaluate protocols for managing large-scale data in a performance efficient and secure manner. My research intersects 3 facets of database systems: performance, fault tolerance, and security. <br><br>
 
@@ -53,14 +52,12 @@
                         <a href="https://scholar.google.com/citations?user=9pZLKbgAAAAJ&hl=en" target="_blank"><span class="ai ai-google-scholar ai-lg"></span></a>
                         <a href="https://www.linkedin.com/in/sujaya-maiyya/" class="icon fa-linkedin" target="_blank"><span class="label"></span></a>&nbsp;&nbsp;
                         <a href="https://github.com/Sujaya" class="icon fa-github" target="_blank"><span class="label">Github</span></a>&nbsp;&nbsp;
-                        <a href="mailto:sujaya_maiyya@ucsb.edu" class="icon fa-envelope fa-xs" target="_blank"><span class="label">Email</span></a>
+                        <a href="mailto:maiyya.sujaya@gmail.com" class="icon fa-envelope fa-xs" target="_blank"><span class="label">Email</span></a>
                         
                         <br>
                         <a href="assets/papers/CV.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'vldb18tutorialpdf'});”>CV</a>
                         <br>
                         <a href="assets/papers/Research_Statement.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'vldb18tutorialpdf'});”>Research Statement</a>
-                        <br>
-                        <i class="fa fa-map-marker"></i> Waterloo, Canada
                 		</footer>
 						</div>
 					</div>
@@ -68,16 +65,15 @@
 			</article>
 		<!-- Work -->
         <article class="wrapper style2">
-                <div class="container" id="news" style="text-align:left; color: black;">
+                <div class="container" id="news" style="text-align:left; color: black; margin-top: -1cm">
                     <div class="col-6 col-8-medium col-12-medium">
                         <section class="box style1" style="text-align: left;">
                             <h2>Recent News</h3>
                             <ul>
-                            	<li><span class="darkfont"> <i> June 2022:</i>  Our paper <a href="https://eprint.iacr.org/2022/691" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'Samya'});”>QuORAM</a> that build a fault tolerant ORAM datastore will appear in USENIX Security'22!</span></li>
+                            	<li><span class="darkfont"> <i> June 2022:</i>  Our paper <a href="https://www.usenix.org/system/files/sec22-maiyya.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'QuORAM'});”>QuORAM</a> that build a fault tolerant ORAM datastore will appear in USENIX Security'22!</span></li>
                             	<li><span class="darkfont"> <i> June 2022:</i>  I successfully defended my thesis!</span></li>
                                 <li><span class="darkfont"> <i> Sept 2021:</i>  I will be attending Rising Stars 2021 workshop!</span></li>
                                 <li><span class="darkfont"> <i> June 2021:</i>  I am a panelist at SIGMOD Students in DB D&I session!</span></li>
-                                <li><span class="darkfont"> <i> April 2021:</i>  Our paper <a href="assets/papers/Samya.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'Samya'});”>Samya</a> appeared in ICDE 2021!</span></li>
                             </ul>
                         </section>
                     </div>
@@ -122,7 +118,7 @@
 
                             <p class="darkfont"><b>Sujaya Maiyya</b>, Prabhanjan Ananth, Divyakant Agrawal, Amr El Abbadi <i>"ORTOA: One Round Trip Oblivious Access"</i>
                             </i>
-                            [<a href="https://eprint.iacr.org/2022/1506" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'ORTOA'});”>pdf</a>].
+                            [<a href="https://eprint.iacr.org/2022/1506.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'ORTOA'});”>pdf</a>].
                             </p>
 
                             <h4>Refereed Conference Publications</h4>
@@ -132,7 +128,7 @@
                             </p>
 
                             <p class="darkfont"><b>Sujaya Maiyya</b>, Seif Ibrahim, Caitlin Scarberry, Divyakant Agrawal, Amr El Abbadi, Rachel Lin, Stefano Tessaro, Victor Zakhary <i>"QuORAM: A Quorum-based Replicated ORAM Datastore"</i> USENIX Security 2022
-                            [<a href="assets/papers/QuORAM.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'QuORAM'});”>pdf</a>].
+                            [<a href="https://www.usenix.org/system/files/sec22-maiyya.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'QuORAM'});”>pdf</a>] [<a href="https://www.youtube.com/watch?v=2eUu6Cj-WI8&ab_channel=SujayaMaiyya" target=”_blank” onclick=”ga('send'});”>video</a>].
                             </p>
                             <p class="darkfont"><b>Sujaya Maiyya</b>, Ishtiyaque Ahmad, Divyakant Agrawal, Amr El Abbadi <i>"Samya: Geo-Distributed Data System for High Contention Data Aggregates"</i> ICDE 2021
                             [<a href="assets/papers/Samya.pdf" target=”_blank” onclick=”ga('send', {hitType: 'event',eventCategory: 'Document',eventAction: 'download',eventLabel: 'Samya'});”>pdf</a>].
@@ -179,7 +175,7 @@
                     </div>           
                 </div>
                 <br>
-                <div class="container" id="ongoing">
+                <!-- <div class="container" id="ongoing">
                     <div class="col-4 col-6-medium col-12-small" >
                         <section class="box style1" style="text-align: left; color: black;">
                             <h2>Ongoing Research</h2>
@@ -194,12 +190,29 @@
                         </section>
                     </div>
                 </div>
+                <br> -->
+                <div class="container" id="professional_service">
+                    <div class="col-4 col-6-medium col-12-small" >
+                        <section class="box style1" style="text-align: left; color: black;">
+                            <h2>Professional Service</h2>
+                            <span class="darkfont" >
+                            <b> Program Committee</b>
+                            <br>
+                                <li>SIGMOD Demo 2023</li>
+                                <li>SoCC 2023</li>
+                                <li>ICDE 2023</li>
+                                <li>FGCS Journal 2022</li>
+                                <li>DKE Journal 2021</li>
+                            </span>
+                        </section>
+                    </div>
+                </div>
                 <br>
                 <div class="container" id="teaching">
                     <div class="col-4 col-6-medium col-12-small" >
                         <section class="box style1" style="text-align: left; color: black;">
                             <h2>Teaching Experience</h2>
-                            <span class="darkfont" >I have served as a Teaching Assistant in the Computer Science department at UCSB for two years. 
+                            <span class="darkfont" >I have served as a Teaching Assistant in the Computer Science department at UCSB for three years. 
                             The courses I have taught are:
                             <br>
                                 <li>CS130A: Data Structures and Algorithms using C++ - Fall 2018, Winter 2018</li>
